--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,1 +1,7 @@
 <h1>Home Page</h1>
+
+<h1>Animated World Zoom</h1>
+<div>
+<div id="map"></div>
+<div id="control"><label for="north-up"><input type="checkbox" checked id="north-up"> North is up</label></div>
+</div>
