--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -13,6 +13,10 @@
   <link rel="stylesheet" href="/stylesheets/application.css">
 
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+  <script src="/javascript/underscore.js"></script>
+  <script src="/javascript/d3.min.js"></script>
+  <script src="/javascript/topojson.min.js"></script>
+  <script src="/javascript/d3.geo.zoom.min.js"></script>
   <script src="/javascript/application.js"></script>
 
   <title></title>
