--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -6,13 +6,14 @@
     differences in how form elements appear between Firefox and IE
     See: http://necolas.github.com/normalize.css/
   -->
-  <link rel="stylesheet" href="/stylesheets/normalize.css">
+  <link rel="stylesheet" href="/stylesheets/bootstrap.css">
   <!--
     application.css is where you put your styles
   -->
   <link rel="stylesheet" href="/stylesheets/application.css">
 
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+  <script src="/javascript/bootstrap.min.js"></script>
   <script src="/javascript/underscore.js"></script>
   <script src="/javascript/d3.min.js"></script>
   <script src="/javascript/topojson.min.js"></script>
