--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -10,3 +10,20 @@
 #canvas {
   margin: auto auto;
 }
+
+#pagenum {
+  color: #000;
+  background-color: #fff;
+  display: inline-block;
+  margin-bottom: 0;
+  font-weight: normal;
+  text-align: center;
+  vertical-align: middle;
+  background-image: none;
+  border: 1px solid transparent;
+  white-space: nowrap;
+  padding: 10px 15px;
+  font-size: 15px;
+  line-height: 1.42857143;
+  border-radius: 4px;
+}
