--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -12,10 +12,21 @@
           <input type="checkbox" checked id="north-up"> North is up</label>
         </div>
       </div>
-      <div class='row text-center'>
-        <button id='previous' class="btn btn-default">Previous</button>
-        <div id='pagenum' contentclass='label label-default' contenteditable='true'></div>
-        <button id='next' class="btn btn-default">Next</button>
+      <div class="row">
+        <div class="col">
+          <button id='scroller' class="btn btn-default">Continue Scrolling!</button>
+        </div>
+      </div>
+      <div class='row'>
+        <div class='col-md-4 text-left'>
+          <button id='previous' class="btn btn-default">Previous</button>
+        </div>
+        <div class='col-md-4 text-center'>
+          <div id='pagenum' contentclass='label label-default' contenteditable='true'></div>
+        </div>
+        <div class='col-md-4 text-right'>
+          <button id='next' class="btn btn-default">Next</button>
+        </div>
       </div>
     </div>
     <div class ='col col-md-8'>
